Native messaging working.

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -134,11 +134,10 @@
   "window.titleBarStyle": "native",
   "window.zoomLevel": 0,
   "workbench.activityBar.visible": true,
-  "workbench.colorCustomizations": {},
   "workbench.colorTheme": "Nord",
   "workbench.editor.enablePreview": true,
   "workbench.editor.enablePreviewFromQuickOpen": true,
-  "workbench.iconTheme": "ayu",
+  "workbench.iconTheme": "nonicons",
   "workbench.list.openMode": "singleClick",
   "workbench.settings.editor": "json",
   "workbench.settings.openDefaultKeybindings": false,
