Adding Neovim plugins and configuration.

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -19,7 +19,7 @@
   "editor.dragAndDrop": false,
   "editor.emptySelectionClipboard": false,
   "editor.find.autoFindInSelection": "never",
-  "editor.fontFamily": "Hack, monospace",
+  "editor.fontFamily": "'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 12,
   "editor.fontWeight": "300",
@@ -114,7 +114,7 @@
   "scm.diffDecorationsGutterWidth": 1,
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
-  "terminal.integrated.fontFamily": "Hack, monospace",
+  "terminal.integrated.fontFamily": "'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
   "terminal.integrated.fontSize": 12,
   "terminal.integrated.lineHeight": 1.3,
   "terminal.integrated.rightClickBehavior": "copyPaste",
