Changing editor settings and adding Sway config.

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -16,13 +16,14 @@
   },
   "editor.colorDecorators": true,
   "editor.cursorSmoothCaretAnimation": false,
+  "editor.definitionLinkOpensInPeek": true,
   "editor.dragAndDrop": false,
-  "editor.emptySelectionClipboard": false,
+  "editor.emptySelectionClipboard": true,
   "editor.find.autoFindInSelection": "never",
   "editor.fontFamily": "'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 12,
-  "editor.fontWeight": "300",
+  "editor.fontWeight": "400",
   "editor.formatOnSave": false,
   "editor.formatOnType": false,
   "editor.hideCursorInOverviewRuler": true,
@@ -50,12 +51,14 @@
   "editor.selectionHighlight": false,
   "editor.smoothScrolling": true,
   "editor.snippetSuggestions": "bottom",
+  "editor.stickyTabStops": true,
   "editor.suggest.snippetsPreventQuickSuggestions": false,
   "editor.suggestSelection": "recentlyUsedByPrefix",
   "editor.tabSize": 2,
   "editor.wordWrap": "",
   "editor.wordWrapColumn": 80,
   "editor.wrappingIndent": "same",
+  "editor.wrappingStrategy": "advanced",
   "emmet.triggerExpansionOnTab": true,
   "eslint.alwaysShowStatus": true,
   "eslint.options": {
@@ -72,7 +75,8 @@
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "files.associations": {
-    "*.cfg": "CSGO cfg"
+    "*.cfg": "CSGO cfg",
+    "tridactylrc": "VimL"
   },
   "files.eol": "\n",
   "files.exclude": {
@@ -109,7 +113,6 @@
   "problems.decorations.enabled": false,
   "rewrap.autoWrap.enabled": true,
   "rewrap.reformat": true,
-  "rewrap.wholeComment": true,
   "scm.diffDecorations": "none",
   "scm.diffDecorationsGutterWidth": 1,
   "telemetry.enableCrashReporter": false,
