Tweaking diagnostics on hover in Neovim.

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -20,9 +20,9 @@
   "editor.dragAndDrop": false,
   "editor.emptySelectionClipboard": true,
   "editor.find.autoFindInSelection": "never",
-  "editor.fontFamily": "'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
+  "editor.fontFamily": "'Iosevka Nerd Font', 'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
   "editor.fontLigatures": true,
-  "editor.fontSize": 12,
+  "editor.fontSize": 13,
   "editor.fontWeight": "400",
   "editor.formatOnSave": false,
   "editor.formatOnType": false,
