--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -117,7 +117,7 @@
   "scm.diffDecorationsGutterWidth": 1,
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
-  "terminal.integrated.fontFamily": "'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
+  "terminal.integrated.fontFamily": "'Iosevka Nerd Font', 'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
   "terminal.integrated.fontSize": 12,
   "terminal.integrated.lineHeight": 1.3,
   "terminal.integrated.rightClickBehavior": "copyPaste",
@@ -140,7 +140,7 @@
   "workbench.colorTheme": "Nord",
   "workbench.editor.enablePreview": true,
   "workbench.editor.enablePreviewFromQuickOpen": true,
-  "workbench.iconTheme": "nonicons",
+  "workbench.iconTheme": "vs-seti",
   "workbench.list.openMode": "singleClick",
   "workbench.settings.editor": "json",
   "workbench.settings.openDefaultKeybindings": false,
