Adding wee_slack.py.

--- a/config/weechat/weechat.conf
+++ b/config/weechat/weechat.conf
@@ -349,7 +349,12 @@ title.type = window
 
 [layout]
 default.buffer = "core;weechat;1"
-default.window = "1;0;0;0;core;weechat"
+default.buffer = "irc;server.libera;1"
+default.buffer = "irc;libera.#javascript;2"
+default.buffer = "irc;libera.#typescript;3"
+default.buffer = "irc;libera.#react;4"
+default.buffer = "irc;libera.##programming;5"
+default.window = "1;0;0;0;irc;libera.#typescript"
 default.current = on
 
 [notify]
