--- a/config/sway/config
+++ b/config/sway/config
@@ -3,7 +3,7 @@
 #
 
 # Font
-set $font Iosevka Nerd Font
+set $font Input Sans 10
 
 # Color scheme
 set $colors nord
@@ -36,8 +36,8 @@ set $screenshot-screen grim -o \
   "$(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')"
 
 set $lock swaylock \
-  --font "Iosevka Nerd Font" \
-  --font-size 14 \
+  --font "Input Sans" \
+  --font-size 12 \
   --scaling fill \
   --ignore-empty-password \
   --indicator-radius 150 \
