--- a/config/weechat/irc.conf
+++ b/config/weechat/irc.conf
@@ -191,7 +191,7 @@ libera.local_hostname
 libera.usermode
 libera.command
 libera.command_delay
-libera.autojoin = "#javascript,#typescript,#react,##programming"
+libera.autojoin = "#javascript,#typescript,#vim,#neovim,#react,##programming"
 libera.autorejoin
 libera.autorejoin_delay
 libera.connection_timeout
