Adding configuration values.

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -46,7 +46,7 @@
   "editor.dragAndDrop": false,
   "editor.emptySelectionClipboard": true,
   "editor.find.autoFindInSelection": "never",
-  "editor.fontFamily": "'Iosevka Nerd Font', 'CaskaydiaCove Nerd Font', 'Hack Nerd Font', monospace",
+  "editor.fontFamily": "'Input Mono Condensed', monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 13,
   "editor.fontWeight": "400",
@@ -62,10 +62,10 @@
   "editor.occurrencesHighlight": false,
   "editor.overviewRulerBorder": false,
   "editor.quickSuggestions": {
-		"other": true,
-		"comments": false,
-		"strings": false
-	},
+    "other": true,
+    "comments": false,
+    "strings": false
+  },
   "editor.renderControlCharacters": true,
   "editor.renderIndentGuides": false,
   "editor.renderLineHighlight": "none",
@@ -74,14 +74,14 @@
   "editor.rulers": [
     80
   ],
-  "editor.selectionHighlight": false,
+  "editor.selectionHighlight": true,
   "editor.smoothScrolling": true,
   "editor.snippetSuggestions": "bottom",
   "editor.stickyTabStops": true,
   "editor.suggest.snippetsPreventQuickSuggestions": false,
   "editor.suggestSelection": "recentlyUsedByPrefix",
   "editor.tabSize": 2,
-  "editor.wordWrap": "",
+  "editor.wordWrap": "bounded",
   "editor.wordWrapColumn": 80,
   "editor.wrappingIndent": "same",
   "editor.wrappingStrategy": "advanced",
@@ -104,7 +104,6 @@
     "*.cfg": "CSGO cfg",
     "tridactylrc": "VimL"
   },
-  "files.eol": "\n",
   "files.exclude": {
     "**/.DS_Store": true,
     "**/.git": true,
@@ -130,9 +129,9 @@
   "javascript.validate.enable": false,
   "json.format.enable": false,
   "js/ts.implicitProjectConfig.checkJs": true,
-	"js/ts.implicitProjectConfig.experimentalDecorators": true,
-	"js/ts.implicitProjectConfig.strictFunctionTypes": true,
-	"js/ts.implicitProjectConfig.strictNullChecks": true,
+  "js/ts.implicitProjectConfig.experimentalDecorators": true,
+  "js/ts.implicitProjectConfig.strictFunctionTypes": true,
+  "js/ts.implicitProjectConfig.strictNullChecks": true,
   "markdown.preview.fontSize": 12,
   "markdown.preview.lineHeight": 1.6,
   "npm.packageManager": "yarn",
@@ -159,7 +158,6 @@
   "window.openFilesInNewWindow": "default",
   "window.openFoldersInNewWindow": "default",
   "window.restoreWindows": "one",
-  "window.title": "${dirty}${rootName}",
   "window.titleBarStyle": "native",
   "window.zoomLevel": 0,
   "workbench.activityBar.visible": true,
