--- a/config/swaylock/config
+++ b/config/swaylock/config
@@ -58,7 +58,7 @@ caps-lock-bs-hl-color=d08770ff
 caps-lock-key-hl-color=ebcb8bff
 
 # Sets the font of the text
-font=Fira Sans Light
+font=Input Sans Condensed
 
 # FUTURE RELEASE
 # Sets a fixed font size for the indicator text
