Adding jira-cli package.

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -41,3 +41,5 @@ bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
 
 bind-key -n C-\if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
